log/build_2025-04-17_17-27-52/object_filter_package/stderr.log
  File "/home/rm/filter/install/object_filter_package/lib/python3.10/site-packages/object_filter_package/onnxrun.py", line 13
    class_names = [ /* your 25 names here */ ]
                    ^
SyntaxError: invalid syntax

